--- a/antismash/outputs/html/templates/cds_detail.html
+++ b/antismash/outputs/html/templates/cds_detail.html
@@ -72,7 +72,7 @@
 <div class="focus-urls">
  {{build_blastp_link(feature.get_name(), "NCBI BlastP on this gene")}}<br>
  <span class="asdb-linkout link-like wildcard-container" data-locus="{{feature.get_name()}}" data-wildcard-attrs="data-seq" data-seq="{{replace_with('translation')}}">Blast against antiSMASH-database</span><br>
- {%- if add_ncbi_context -%}
+ {%- if add_ncbi_context and not feature.crosses_origin() -%}
  <a href="{{urls['context']}}" target="_new">View genomic context</a><br>
  {%- endif -%}
  {%- if urls['mibig'] -%}
