hmm_detection: add rule for 7-deazapurines
phmm: Add pHMM files for detection of deazapurine gene clusters

Added pHMM files to support the detection of deazapurine BGCs.
These files will assist in identifying enzymes related to deazapurine
biosynthesis across different bacterial genomes.

phmm: Add pHMM files for detection of signature enzymes for deazapurines modifying tRNA

Added pHMM files to support the detection of signature enzymes involved
in deazapurine modifications of tRNA. These files will help discriminate
deazapurine gene clusters that modify tRNA, distinguishing them
from those involved in secondary metabolite biosynthesis across different bacterial genomes

phmm: Add pHMM files for detection of signature enzymes for deazapurines modifying DNA

Added pHMM files to support the detection of signature enzymes involved
in deazapurine modifications of DNA. These files will help discriminate
deazapurine gene clusters that modify DNA, distinguishing them
from those involved in secondary metabolite biosynthesis across different bacterial genomes

Add 7-deazapurine rule to strict.txt

Add details of pHMMs files related to deazapurine gene clusters to hmmdetails.txt

Add the nucleoside custom colouring for the 7-deazapurine rule to secmet.scss

Delete ToyB.hmm from the hmm_detection_data

Delete additional pHMM for deazapurine gene cluster detection

Delete additional negative conditions for deazapurine detection

Delete additional hmm details for deazapurine detection

Add the nucleoside custom colouring for the 7-deazapurine rule to secmet.scss

Remove the ToyB entry from the hmmdetails.txt file

--- a/antismash/outputs/html/css/secmet.scss
+++ b/antismash/outputs/html/css/secmet.scss
@@ -167,8 +167,12 @@
     @include secmet(black, peachpuff, black);
 }
 
-.nucleoside {
+@mixin nucleoside {
     @include secmet(black, antiquewhite, black);
+}
+
+.deazapurine {
+    @include nucleoside;
 }
 
 .phosphoglycolipid {
