html: make related cluster similarity qualitative and more obvious

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -535,6 +535,7 @@ table.region-table {
 
 .similarity-text {
     color: $antismash-gray;
+    border-bottom: 1px solid $table-background;
 }
 
 .svgene-type-other {
