nrps_pks: update NORINE links to active site

--- a/antismash/modules/nrps_pks/templates/products.html
+++ b/antismash/modules/nrps_pks/templates/products.html
@@ -51,7 +51,7 @@
     {% endfor %}
     <div class="prediction-text">
       <br>
-      <a class="external-link" href="http://bioinfo.lifl.fr/norine/form2.jsp" target="_new">Link to NORINE database query form</a>
+      <a class="external-link" href="{{ norine_base }}/form2.jsp" target="_new">Link to NORINE database query form</a>
     </div>
   {% endif %}
 </div>
