--- a/antismash/modules/nrps_pks/templates/monomers.html
+++ b/antismash/modules/nrps_pks/templates/monomers.html
@@ -34,4 +34,8 @@
       <br>
     {% endfor %}
   </dl>
+  <div class="prediction-text">
+    <br>
+    <a class="external-link" href="https://paras.bioinformatics.nl" target="_new">Link to PARAS substrate predictor</a>
+  </div>
 </div>
