html: move NRPS/PKS domain view to visualisers, removing special case

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -103,7 +103,7 @@
   <script src="regions.js"></script>
   <script>
     $(document).ready(function() {
-        viewer["start"](all_regions, details_data, resultsData, recordData);
+        viewer["start"](all_regions, resultsData, recordData);
     })
   </script>
 
