html: Make all cds selectors have a pointer cursor and serif font
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/style.scss
+++ b/antismash/outputs/html/css/style.scss
@@ -1645,6 +1645,11 @@ ul.dropdown-options {
     margin-right: 0.5em;
 }
 
+.cds-selector {
+    cursor: pointer;
+    @extend .serif;
+}
+
 .tfbs-details-container {
     .tfbs-weak-hits {
         padding-bottom: 1em;
