hmm_detection: Merge thiopeptide and LAP rules and rename
They frequently hit together and seem to be too similar to tell them apart properly

Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/modules/thiopeptides/templates/details.html
+++ b/antismash/modules/thiopeptides/templates/details.html
@@ -1,13 +1,13 @@
 <div class="details">
  <div class="heading">
-   <span>Thiopeptide predictions</span>
+   <span>(Thi)azol(in)e containing peptide predictions</span>
    {{help_tooltip(tooltip, "thio-body")}}
  </div>
  <div class="details-text ripp-body">
  {% if not motif_groups %}
   No core peptides found.
  {% else %}
-  <h4> Thiopeptide(s) </h4>
+  <h4> (Thi)azol(in)e containing peptide(s) </h4>
   <hr>
   {% for motifs in motif_groups %}
   <div class="ripp-motif">
