terpene: Add abbreviation 'PP' in functional groups to glossary list

--- a/antismash/modules/terpene/templates/sidepanel.html
+++ b/antismash/modules/terpene/templates/sidepanel.html
@@ -8,7 +8,7 @@
       <thead>
         <tr>
           <th>Acronym</th>
-          <th>Full compound name</th>
+          <th>Full name</th>
         </tr>
       </thead>
       <tbody>
