terpene: change HTML detail section header

--- a/antismash/modules/terpene/templates/details.html
+++ b/antismash/modules/terpene/templates/details.html
@@ -1,6 +1,6 @@
 <div class="terpene-details">
     <div class="heading">
-      <span>Detailed domain annotation</span> {{ help_tooltip(tooltip, "terpene-body") }}
+      <span>Detailed terpene predictions</span> {{ help_tooltip(tooltip, "terpene-body") }}
     </div>
     {% for cluster, prediction in preds_by_cluster.items() %}
       <div class="protocluster-pred">
