--- a/antismash/modules/cluster_compare/templates/row.html
+++ b/antismash/modules/cluster_compare/templates/row.html
@@ -21,7 +21,7 @@
     </tr>
     {% for ref, total in results %}
         <tr class="cc-heat-row heat-row-{{class_name}}" data-accession="{{ref.get_identifier()}}">
-      <td>{% if url %}<a href="{{url.format(accession=ref.accession.split('.')[0], version=ref.accession.split('.')[1], start=ref.start, end=ref.end)}}" target="_new">{{ref.accession if class_name == "MIBiG" else ref.get_identifier()}}</a>{% else %} {{ref.get_identifier()}} {% endif %}</td>
+      <td>{% if url %}<a href="{{url.format(accession=ref.accession.split('.')[0], version=ref.accession.split('.')[1], start=ref.start, end=ref.end)}}" target="_blank">{{ref.accession if class_name == "MIBiG" else ref.get_identifier()}}</a>{% else %} {{ref.get_identifier()}} {% endif %}</td>
         {% for proto in region.get_unique_protoclusters() %}
          {% if proto_results.get(proto.get_protocluster_number(), {}).get(ref) %}
           {% set score = proto_results[proto.get_protocluster_number()][ref] %}
