--- a/antismash/outputs/html/templates/region_table_macros.html
+++ b/antismash/outputs/html/templates/region_table_macros.html
@@ -18,7 +18,7 @@
 {% macro region_row(region, cycle, record_index, options, css) -%}
    <tr class="linked-row {{cycle}}" data-anchor="#{{region.anchor_id}}">
      {{region_button(region, "td", css)}}
-      <a href="#{{region.anchor_id}}">Region&nbsp{% if record_index %}{{record_index}}.{% endif %}{{region.get_region_number()}}</a>
+      <a href="#{{region.anchor_id}}">Region&nbsp;{% if record_index %}{{record_index}}.{% endif %}{{region.get_region_number()}}</a>
      </td>
      <td>
        {% set join = joiner(",") %}
