--- a/antismash/common/comparippson/templates/generic.html
+++ b/antismash/common/comparippson/templates/generic.html
@@ -17,14 +17,20 @@
 {%- macro create_hit_block(hit, tail, tail_list, colour_subset) -%}
     <div class="comparippson-container">
      <span class="comparippson-similarity">{{ "%.1f" % (hit.similarity*100) }}%</span>
-     <span class="comparippson-link">{{ link(hit) }}
-     {%- if tail_list %}<span class="comparippson-extra-indicator">{{ tail }}</span>:{{ collapser_start("comparippson-extra-names", level="none") }}
+     <div class="comparippson-link">{{ link(hit) }}
+     {%- if tail_list %}<span class="comparippson-extra-indicator">{{ tail }}</span>:
+      {{- collapser_start("comparippson-extra-names", level="none") }}
        <span class="comparippson-extra-names">
         {%- for other in tail_list -%}
         <span>{{ link(other) }}</span>
         <span>{{ description(other) }}</span>
         {%- endfor %}
-      {{ collapser_end() }}{% else %}:{% endif %}</span>
+       </span>
+      {{ collapser_end() }}
+     {%- else -%}
+     :
+     {%- endif -%}
+     </div>
      {{ description(hit) }}
      <div class="comparippson-alignment">
        {{ segment_line(hit.query, colour_subset) }}
