config: add flag to skip gbk summary writing

--- a/antismash/outputs/html/templates/header.html
+++ b/antismash/outputs/html/templates/header.html
@@ -18,7 +18,9 @@
         {% if not options.skip_zip_file %}
         <li><a href="{{options.output_basename}}.zip">Download all results</a></li>
         {% endif %}
+        {% if options.summary_gbk %}
           <li><a href="{{options.output_basename}}.gbk">Download GenBank summary file</a></li>
+        {% endif %}
           <li><a href="{{options.output_basename}}.json">Download JSON results file</a></li>
         {% if options.logfile and options.download_logfile() != None %}
           <li><a href="{{options.download_logfile()}}">Download log file</a></li>
