html: change similarity confidence header to disambiguate between cluster calling and similarity

--- a/antismash/outputs/html/templates/region_table_macros.html
+++ b/antismash/outputs/html/templates/region_table_macros.html
@@ -5,7 +5,7 @@
    <th>Type</th>
    <th>From</th>
    <th>To</th>
-   <th>Confidence</th>
+   <th>Similarity Confidence</th>
    <th colspan="2">Most similar known cluster</th>
   </tr>
  </thead>
