--- a/antismash/outputs/html/templates/regions.html
+++ b/antismash/outputs/html/templates/regions.html
@@ -9,9 +9,11 @@
   <div class = "content">
     <div class ="description-container">
       <div class="heading"> {{record.get_name()}} - Region {{region.get_region_number()}} - {{region.get_product_string()}} {{help_tooltip(svg_tooltip, "region_svg")}}</div>
-      <div class="region-download">
-        <a href = {{ '%s.region%03d.gbk' % (record.id, region.get_region_number()) }}>Download region GenBank file</a>
-      </div>
+      {% if options.region_gbks %}
+        <div class="region-download">
+          <a href = {{ '%s.region%03d.gbk' % (record.id, region.get_region_number()) }}>Download region GenBank file</a>
+       </div>
+      {% endif %}
       <div class="region-download">
         <div class="link-like download-svg" data-tag="{{region.anchor_id}}-svg" data-filename="{{record.id}}_{{region.anchor_id}}.svg">Download region SVG</div>
       </div>
